--- a/publications.html
+++ b/publications.html
@@ -30,7 +30,7 @@
     <div id="site_content">
       <!--<div class="sidebar">
   <img src="images/Panos.jpg" width=190px/>
- 	<h4>Address</h4>
+  <h4>Address</h4>
   Department of Informatics <br/>
   King's College London <br/>
   Strand Campus <br/>
@@ -39,21 +39,21 @@
   London, WC2B 4BG <br/>
   UK <br/>
 
-	<h4>Email</h4>
-	panagiotis.charalampopoulos[at]kcl.ac.uk <br/>
+  <h4>Email</h4>
+  panagiotis.charalampopoulos[at]kcl.ac.uk <br/>
       </div>-->
 <div id="content" style="width: 800px;">
-	<h2>Preprints</h2>
-	<ul style="list-style: none;">
+  <h2>Preprints</h2>
+  <ul style="list-style: none;">
   <li>P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis and J. Radoszewski:<br> <strong>Pattern Masking for Dictionary Matching</strong>. [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>]</li>
-	</ul>
+  </ul>
 
-	<h2>Conference papers</h2>
-	<ul style="list-style: none;">
+  <h2>Conference papers</h2>
+  <ul style="list-style: none;">
     <li>P. Charalampopoulos, T. Kociumaka and P. Wellnitz:<br> <strong>Faster Approximate Pattern Matching: A Unified Approach</strong>,<br> FOCS 2020. [<a href="https://arxiv.org/abs/2004.08350">arxiv</a>]</li>
     <li>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba:<br> <strong>Efficient Enumeration of Distinct Factors Using Package Representations</strong>,<br> SPIRE 2020.</li>
-    <li>P. Charalampopoulos, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba:<br> <strong>The Number of Repetitions in 2D-Strings</strong>,<br> ESA 2020. [<a href="https://arxiv.org/abs/2006.15999">arxiv</a>]</li>
-    <li>P. Charalampopoulos and A. Karczmarz:<br> <strong>Single-Source Shortest Paths and Strong Connectivity in Dynamic Planar Graphs</strong>,<br> ESA 2020.</li>
+    <li>P. Charalampopoulos, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba:<br> <strong>The Number of Repetitions in 2D-Strings</strong>,<br> ESA 2020: 32:1-32:18. [<a href="https://doi.org/10.4230/LIPIcs.ESA.2020.32">doi</a>][<a href="https://arxiv.org/abs/2006.15999">arxiv</a>]</li>
+    <li>P. Charalampopoulos and A. Karczmarz:<br> <strong>Single-Source Shortest Paths and Strong Connectivity in Dynamic Planar Graphs</strong>,<br> ESA 2020: 31:1-31:23. [<a href="https://doi.org/10.4230/LIPIcs.ESA.2020.31">doi</a>]</li>
     <li>P. Charalampopoulos, P. Gawrychowski and K. Pokorski:<br> <strong>Dynamic Longest Common Substring in Polylogarithmic Time</strong>,<br> ICALP 2020: 27:1-27:19. [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2020.27">doi</a>][<a href="https://arxiv.org/abs/2006.02408">arxiv</a>]</li>
     <li>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, T. Wale&#324 and W. Zuba:<br> <strong>Unary Words Have the Smallest Levenshtein k-Neighbourhoods</strong>,<br> CPM 2020: 10:1-10:12. [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.10">doi</a>]</li>
     <li>P. Charalampopoulos, T. Kociumaka and S. Mozes:<br> <strong>Dynamic String Alignment</strong>,<br> CPM 2020: 9:1-9:13. [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.9">doi</a>]</li>
@@ -62,8 +62,8 @@
     <li>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324 and W. Zuba:<br> <strong>Weighted Shortest Common Supersequence Problem Revisited</strong>,<br> SPIRE 2019: 221-238. [<a href="https://doi.org/10.1007/978-3-030-32686-9_16">doi</a>][<a href="https://arxiv.org/abs/1909.11433">arxiv</a>]</li>
     <li>A. Amir, P. Charalampopoulos, S. P. Pissis and J. Radoszewski:<br> <strong>Longest Common Substring Made Fully Dynamic</strong>,<br> ESA 2019: 6:1-6:17. [<a href="https://doi.org/10.4230/LIPIcs.ESA.2019.6">doi</a>][<a href="https://arxiv.org/abs/1804.08731">arxiv</a>]</li>
     <li>A. Amir, I. Boneh, P. Charalampopoulos and E. Kondratovsky:<br> <strong>Repetition Detection in a Dynamic String</strong>,<br> ESA 2019: 5:1-5:18. [<a href="https://doi.org/10.4230/LIPIcs.ESA.2019.5">doi</a>]</li>
-    <li>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324 and W. Zuba:<br> <strong>Circular pattern matching with k mismatches</strong>,<br> FCT 2019: 213-228. [<a href="https://doi.org/10.1007/978-3-030-25027-0_15">doi</a>][<a href="https://arxiv.org/abs/1907.01815">arxiv</a>]</li>
-  	<li>P. Charalampopoulos, P. Gawrychowski, S. Mozes and O. Weimann:<br> <strong>Almost Optimal Distance Oracles for Planar Graphs</strong>,<br>STOC 2019: 138-151. [<a href="https://doi.org/10.1145/3313276.3316316">doi</a>][<a href="https://arxiv.org/abs/1811.01551">arxiv</a>]</li>
+    <li>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324 and W. Zuba:<br> <strong>Circular Pattern Matching with k Mismatches</strong>,<br> FCT 2019: 213-228. [<a href="https://doi.org/10.1007/978-3-030-25027-0_15">doi</a>][<a href="https://arxiv.org/abs/1907.01815">arxiv</a>]</li>
+    <li>P. Charalampopoulos, P. Gawrychowski, S. Mozes and O. Weimann:<br> <strong>Almost Optimal Distance Oracles for Planar Graphs</strong>,<br>STOC 2019: 138-151. [<a href="https://doi.org/10.1145/3313276.3316316">doi</a>][<a href="https://arxiv.org/abs/1811.01551">arxiv</a>]</li>
     <li>P. Charalampopoulos, S. Mozes and B. Tebeka:<br> <strong>Exact Distance Oracles for Planar Graphs with Failing Vertices</strong>,<br> SODA 2019: 2110-2123. [<a href="https://doi.org/10.1137/1.9781611975482.127">doi</a>][<a href="https://arxiv.org/abs/1807.05968">arxiv</a>]</li>
     <li>P. Charalampopoulos, M. Crochemore and S. P. Pissis:<br> <strong>On Extended Special Factors of a Word</strong>,<br> SPIRE 2018: 131-138. [<a href="https://doi.org/10.1007/978-3-030-00479-8_11">doi</a>][<a href="https://kclpure.kcl.ac.uk/portal/files/99484331/extended_special_factors.pdf">pdf</a>]</li>
     <li>L. A. K. Ayad, C. Barton, P. Charalampopoulos, C. S. Iliopoulos and S. P. Pissis:<br> <strong>Longest Common Prefixes with k-Errors and Applications</strong>,<br> SPIRE 2018: 27-41. [<a href="https://doi.org/10.1007/978-3-030-00479-8_3">doi</a>][<a href="https://arxiv.org/abs/1801.04425">arxiv</a>]</li>
@@ -77,13 +77,14 @@
     <li {style:"margin-left: 8em; padding-left: 8em;"}>P. Charalampopoulos, M. Crochemore, C. S. Iliopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter and T. Wale&#324:<br> <strong>Efficient Enumeration of Non-Equivalent Squares in Partial Words with Few Holes</strong>,<br> COCOON 2017: 99-111. [<a href="https://link.springer.com/chapter/10.1007/978-3-319-62389-4_9">doi</a>]
     <li>M. Alzamel, P. Charalampopoulos, C. S. Iliopoulos and S. P. Pissis:<br> <strong>How to Answer a Small Batch of RMQs or LCA Queries in Practice</strong>,<br> IWOCA 2017: 343-355. [<a href="https://link.springer.com/chapter/10.1007%2F978-3-319-78825-8_28">doi</a>][<a href="https://arxiv.org/abs/1705.04589">arxiv</a>]</li>
     <li>M. Adamczyk, M. Alzamel, P. Charalampopoulos, C. S. Iliopoulos and J. Radoszewski:<br> <strong>Palindromic Decompositions with Gaps and Errors</strong>,<br> CSR 2017: 48-61. [<a href="https://doi.org/10.1007/978-3-319-58747-9_7">doi</a>][<a href="https://arxiv.org/abs/1703.08931">arxiv</a>]</li>
-	<li>Y. Almirantis, P. Charalampopoulos, J. Gao, C. S. Iliopoulos, M. Mohamed, S. P. Pissis and D. Polychronopoulos:<br> <strong>Optimal Computation of Avoided Words</strong>,<br> WABI 2016: 1-13. [<a href="http://dx.doi.org/10.1007/978-3-319-43681-4_1">doi</a>][<a href="https://arxiv.org/abs/1604.08760">arxiv</a>]</li>
-	</ul>
+  <li>Y. Almirantis, P. Charalampopoulos, J. Gao, C. S. Iliopoulos, M. Mohamed, S. P. Pissis and D. Polychronopoulos:<br> <strong>Optimal Computation of Avoided Words</strong>,<br> WABI 2016: 1-13. [<a href="http://dx.doi.org/10.1007/978-3-319-43681-4_1">doi</a>][<a href="https://arxiv.org/abs/1604.08760">arxiv</a>]</li>
+  </ul>
 
-	<h2>Journal papers</h2>
-	<!--<ol reversed> or <reversed ol> and </ol> for numbering-->
-	<ul style="list-style: none;">
-    <li>A. Amir, P. Charalampopoulos, S. P. Pissis and J. Radoszewski:<br> <strong>Dynamic and Internal Longest Common Substring</strong>,<br> Algorithmica.</li>
+  <h2>Journal papers</h2>
+  <!--<ol reversed> or <reversed ol> and </ol> for numbering-->
+  <ul style="list-style: none;">
+     <li>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324 and W. Zuba:<br> <strong>Circular Pattern Matching with k Mismatches</strong>,<br> Journal of Computer and System Sciences.  [<a href="https://doi.org/10.1016/j.jcss.2020.07.003">doi</a>]</li>
+    <li>A. Amir, P. Charalampopoulos, S. P. Pissis and J. Radoszewski:<br> <strong>Dynamic and Internal Longest Common Substring</strong>,<br> Algorithmica. [<a href="https://doi.org/10.1007/s00453-020-00744-0">doi</a>]</li>
     <li>P. Charalampopoulos, C. S. Iliopoulos, C. Liu and S. P. Pissis:<br> <strong>Property Suffix Array with Applications in Indexing Weighted Sequences</strong>,<br> ACM Journal of Experimental Algorithmics Experimental Algorithmics, Volume 25, No. 1, pages 1.8:1-1.8:16 (2020). [<a href="https://doi.org/10.1145/3385898">doi</a>]</li>
     <li>L. A. K. Ayad, P. Charalampopoulos and S. P. Pissis:<br> <strong>SMART: SuperMaximal Approximate Repeats Tool</strong>,<br> Bioinformatics, Volume 36, Issue 8, Pages 2589-2591 (2020). [<a href="https://doi.org/10.1093/bioinformatics/btz953">doi</a>]</li>
     <li>M. Alzamel, P. Charalampopoulos, C. S. Iliopoulos, S. P. Pissis, J. Radoszewski and W. K. Sung:<br> <strong>Faster Algorithms for 1-Mappability of a Sequence</strong>,<br> Theoretical Computer Science 812: 2-12 (2020). [<a href="https://doi.org/10.1016/j.tcs.2019.04.026">doi</a>]</li>
@@ -93,7 +94,7 @@
     <li> P. Charalampopoulos, M. Crochemore, G. Fici, R. Merca&#x219 and S. P. Pissis:<br> <strong>Alignment-Free Sequence Comparison Using Absent Words</strong>,<br> Information and Computation 262(Part 1): 57-68 (2018). [<a href="https://doi.org/10.1016/j.ic.2018.06.002">doi</a>][<a href="https://arxiv.org/abs/1806.02718">arxiv</a>]</li>
     <li>M. Adamczyk, M. Alzamel, P. Charalampopoulos and J. Radoszewski:<br> <strong>Palindromic Decompositions with Gaps and Errors</strong>,<br> International Journal of Foundations of Computer Science 29(8): 1311-1329 (2018). [<a href="https://doi.org/10.1142/S0129054118430050">doi</a>]</li>
     <li>Y. Almirantis, P. Charalampopoulos, J. Gao, C. S. Iliopoulos, M. Mohamed, S. P. Pissis and D. Polychronopoulos:<br> <strong>On avoided words, absent words, and their application to biological sequence analysis</strong>,<br> Algorithms for Molecular Biology, vol. 12, no. 1, 2017, pp. 5. [<a href="http://dx.doi.org/10.1186/s13015-017-0094-z">doi</a>]</li>
-	</ul>
+  </ul>
 </div>
 </body>
 </html>
