--- a/index.html
+++ b/index.html
@@ -30,15 +30,6 @@
     <div id="site_content">
       <div class="sidebar">
   <img src="images/Panos.jpg" width=190px/>
- 	<h4>Address</h4>
-	Department of Informatics <br/>
-	King's College London <br/>
-  Strand Campus <br/>
-  Bush House <br/>
-  30 Aldwych <br/>
-  London, WC2B 4BG <br/>
-  UK <br/>
-
 	<h4>Email</h4>
 	panagiotis.charalampopoulos[at]kcl.ac.uk <br/>
       </div>
@@ -50,12 +41,11 @@
         <p>From October 2019 to March 2020 I was on a research internship in the <a href="http://en.uw.edu.pl/tag/informatics/">Institute of Informatics</a> at the <a href="http://en.uw.edu.pl/">University of Warsaw</a> under the supervision of <a href="https://www.mimuw.edu.pl/~jrad/">Jakub Radoszewski</a>, partially supported by grant <a href="http://total.mimuw.edu.pl/">TOTAL</a>.</p>
         <p>From April 2018 to September 2018 I was on a research internship in the <a href="https://www.idc.ac.il/en/schools/cs/pages/home.aspx">Efi Arazi School of Computer Science</a> at the <a href="https://www.idc.ac.il/en/pages/home.aspx">Interdisciplinary Center Herzliya</a> under the supervision of <a href="http://www.faculty.idc.ac.il/smozes/">Shay Mozes</a> (IDC Herzliya) and <a href="http://www.cs.haifa.ac.il/~oren/index.html">Oren Weimann</a> (<a href="https://www.haifa.ac.il/index.php/en/">University of Haifa</a>).</p>
 
-                <p>I was on the PC of the 31st Annual Symposium on Combinatorial Pattern Matching (<a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>).</p>
+                <p>I served on the PC of the 31st Annual Symposium on Combinatorial Pattern Matching (<a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>).</p>
 
         <h2>Research Interests</h2>
         <ul>
-         <li>Algorithms and data structures</li>
-         <li>Combinatorial pattern matching</li>
+        I am interested in algorithms and data structures. The focus of my work is on strings and planar graphs.
         </ul>
         <h2>Education</h2>
         <ul>
