--- a/activities.html
+++ b/activities.html
@@ -44,8 +44,10 @@
    </div>-->
     <div id="content">
   <h2>Reviewing Duties</h2>
-      <p><a href='http://algo2020.di.unipi.it/ESA2020/index.html'>ESA 2020</a>,
-      <a href='https://www.siam.org/Conferences/CM/Conference/sosa20'>SOSA 2020</a>,
+      <p>
+        <a href='https://www.siam.org/conferences/cm/conference/soda21'>SODA 2021</a>,
+        <a href='http://algo2020.di.unipi.it/ESA2020/index.html'>ESA 2020</a>,
+        <a href='https://www.siam.org/Conferences/CM/Conference/sosa20'>SOSA 2020</a>,
         <a href='https://www.siam.org/Conferences/CM/Conference/soda20'>SODA 2020</a>,
         <a href='https://spire19.lbd.org.es/'>SPIRE 2019</a>,
         <a href='https://algo2019.ak.in.tum.de/index.php/menue-esa/esa-overview'>ESA 2019</a>,
