--- a/publications.html
+++ b/publications.html
@@ -15,7 +15,6 @@
       <div id="logo">
         <!-- class="logo_colour", allows you to change the colour of the text -->
         <h1><span class="logo_colour">Panagiotis Charalampopoulos</span></h1>
-        <h2>Algorithms & Data Analysis Group | Department of Informatics | King's College London</h2>
       </div>
       <div id="menubar">
         <ul id="menu">
@@ -56,9 +55,9 @@
     <li>P. Charalampopoulos and A. Karczmarz:<br> <strong>Single-Source Shortest Paths and Strong Connectivity in Dynamic Planar Graphs</strong>,<br> ESA 2020: 31:1-31:23. [<a href="https://doi.org/10.4230/LIPIcs.ESA.2020.31">doi</a>][<a href="https://www.youtube.com/watch?v=sG7KsfrxbKA&ab_channel=ConferenceALGO2020">talk</a>]</li>
     <li>P. Charalampopoulos, P. Gawrychowski and K. Pokorski:<br> <strong>Dynamic Longest Common Substring in Polylogarithmic Time</strong>,<br> ICALP 2020: 27:1-27:19. [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2020.27">doi</a>][<a href="https://arxiv.org/abs/2006.02408">arxiv</a>]</li>
     <li>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, T. Wale&#324 and W. Zuba:<br> <strong>Unary Words Have the Smallest Levenshtein k-Neighbourhoods</strong>,<br> CPM 2020: 10:1-10:12. [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.10">doi</a>]</li>
-    <li>P. Charalampopoulos, T. Kociumaka and S. Mozes:<br> <strong>Dynamic String Alignment</strong>,<br> CPM 2020: 9:1-9:13. [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.9">doi</a>]</li>
-    <li>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324 and W. Zuba:<br> <strong>Counting Distinct Patterns in Internal Dictionary Matching</strong>,<br> CPM 2020: 8:1-8:15. [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.8">doi</a>][<a href="https://arxiv.org/abs/2005.05681">arxiv</a>][<a href="https://www.youtube.com/watch?v=OtTHIHTyo1M&feature=youtu.be&ab_channel=CPM">talk</a>]</li>
-    <li>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter and T. Wale&#324:<br> <strong>Internal Dictionary Matching</strong>,<br> ISAAC 2019: 22:1-22:17. [<a href="https://doi.org/10.4230/LIPIcs.ISAAC.2019.22">doi</a>][<a href="https://arxiv.org/abs/1909.11577">arxiv</a>]<a href="slides/IDM.pdf">slides</a></li>
+    <li>P. Charalampopoulos, T. Kociumaka and S. Mozes:<br> <strong>Dynamic String Alignment</strong>,<br> CPM 2020: 9:1-9:13. [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.9">doi</a>][<a href="slides/Dynamic_String_Alignment.pdf">slides</a>][<a href="https://www.youtube.com/watch?v=OtTHIHTyo1M&feature=youtu.be&ab_channel=CPM">talk</a>]</li>
+    <li>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324 and W. Zuba:<br> <strong>Counting Distinct Patterns in Internal Dictionary Matching</strong>,<br> CPM 2020: 8:1-8:15. [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.8">doi</a>][<a href="https://arxiv.org/abs/2005.05681">arxiv</a>]</li>
+    <li>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter and T. Wale&#324:<br> <strong>Internal Dictionary Matching</strong>,<br> ISAAC 2019: 22:1-22:17. [<a href="https://doi.org/10.4230/LIPIcs.ISAAC.2019.22">doi</a>][<a href="https://arxiv.org/abs/1909.11577">arxiv</a>][<a href="slides/IDM.pdf">slides</a>]</li>
     <li>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324 and W. Zuba:<br> <strong>Weighted Shortest Common Supersequence Problem Revisited</strong>,<br> SPIRE 2019: 221-238. [<a href="https://doi.org/10.1007/978-3-030-32686-9_16">doi</a>][<a href="https://arxiv.org/abs/1909.11433">arxiv</a>]</li>
     <li>A. Amir, P. Charalampopoulos, S. P. Pissis and J. Radoszewski:<br> <strong>Longest Common Substring Made Fully Dynamic</strong>,<br> ESA 2019: 6:1-6:17. [<a href="https://doi.org/10.4230/LIPIcs.ESA.2019.6">doi</a>][<a href="https://arxiv.org/abs/1804.08731">arxiv</a>]</li>
     <li>A. Amir, I. Boneh, P. Charalampopoulos and E. Kondratovsky:<br> <strong>Repetition Detection in a Dynamic String</strong>,<br> ESA 2019: 5:1-5:18. [<a href="https://doi.org/10.4230/LIPIcs.ESA.2019.5">doi</a>]</li>
