--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <p>I served on the PC of the 31st Annual Symposium on Combinatorial Pattern Matching (<a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>).</p>
 
         <h2>Research Interests</h2>
-        <ul>
-        I am interested in algorithms and data structures. The focus of my work is on strings and planar graphs.
-        </ul>
+        
+        <p>I am interested in algorithms and data structures. The focus of my work is on strings and planar graphs.</p>
+        
         <h2>Education</h2>
         <ul>
 	       <li><strong>2016-2020 (expected): Ph.D. in Computer Science, <a href="http://www.kcl.ac.uk/">King's College London</a>, UK</strong></li>
