--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
     <li>P. Charalampopoulos, T. Kociumaka and P. Wellnitz:<br> <strong>Faster Approximate Pattern Matching: A Unified Approach</strong>,<br> FOCS 2020. [<a href="https://arxiv.org/abs/2004.08350">arxiv</a>]</li>
-    <li>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba:<br> <strong>Efficient Enumeration of Distinct Factors Using Package Representations</strong>,<br> SPIRE 2020. [<a href="https://doi.org/10.1007/978-3-030-59212-7\_18">doi</a>]</li>
+    <li>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba:<br> <strong>Efficient Enumeration of Distinct Factors Using Package Representations</strong>,<br> SPIRE 2020: 247-261. [<a href="https://doi.org/10.1007/978-3-030-59212-7\_18">doi</a>] [<a href="slides/Packages.pdf">slides</a>]</li>
     <li>P. Charalampopoulos, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba:<br> <strong>The Number of Repetitions in 2D-Strings</strong>,<br> ESA 2020: 32:1-32:18. [<a href="https://doi.org/10.4230/LIPIcs.ESA.2020.32">doi</a>] [<a href="https://arxiv.org/abs/2006.15999">arxiv</a>]</li>
     <li>P. Charalampopoulos and A. Karczmarz:<br> <strong>Single-Source Shortest Paths and Strong Connectivity in Dynamic Planar Graphs</strong>,<br> ESA 2020: 31:1-31:23. [<a href="https://doi.org/10.4230/LIPIcs.ESA.2020.31">doi</a>] [<a href="https://www.youtube.com/watch?v=sG7KsfrxbKA&ab_channel=ConferenceALGO2020">talk</a>]</li>
     <li>P. Charalampopoulos, P. Gawrychowski and K. Pokorski:<br> <strong>Dynamic Longest Common Substring in Polylogarithmic Time</strong>,<br> ICALP 2020: 27:1-27:19. [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2020.27">doi</a>] [<a href="https://arxiv.org/abs/2006.02408">arxiv</a>]</li>
@@ -82,7 +82,7 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol> and </ol> for numbering-->
   <ul style="list-style: none;">
-     <li>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324 and W. Zuba:<br> <strong>Circular Pattern Matching with k Mismatches</strong>,<br> Journal of Computer and System Sciences.  [<a href="https://doi.org/10.1016/j.jcss.2020.07.003">doi</a>]</li>
+     <li>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324 and W. Zuba:<br> <strong>Circular Pattern Matching with k Mismatches</strong>,<br> Journal of Computer and System Sciences, Volume 115, Pages 73-85 (2021). [<a href="https://doi.org/10.1016/j.jcss.2020.07.003">doi</a>]</li>
     <li>A. Amir, P. Charalampopoulos, S. P. Pissis and J. Radoszewski:<br> <strong>Dynamic and Internal Longest Common Substring</strong>,<br> Algorithmica. [<a href="https://doi.org/10.1007/s00453-020-00744-0">doi</a>]</li>
     <li>P. Charalampopoulos, C. S. Iliopoulos, C. Liu and S. P. Pissis:<br> <strong>Property Suffix Array with Applications in Indexing Weighted Sequences</strong>,<br> ACM Journal of Experimental Algorithmics Experimental Algorithmics, Volume 25, No. 1, pages 1.8:1-1.8:16 (2020). [<a href="https://doi.org/10.1145/3385898">doi</a>]</li>
     <li>L. A. K. Ayad, P. Charalampopoulos and S. P. Pissis:<br> <strong>SMART: SuperMaximal Approximate Repeats Tool</strong>,<br> Bioinformatics, Volume 36, Issue 8, Pages 2589-2591 (2020). [<a href="https://doi.org/10.1093/bioinformatics/btz953">doi</a>]</li>
