--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <h2>Research Interests</h2>
         
-        <p>I am interested in algorithms and data structures. The focus of my work is on strings and planar graphs.</p>
+        <p>I am interested in algorithms and data structures, with focus on strings and planar graphs.</p>
         
         <h2>Education</h2>
         <ul>
