--- a/activities.html
+++ b/activities.html
@@ -27,53 +27,42 @@
       </div>
     </div>
     <div id="site_content">
-      <!--<div class="sidebar">
-	<img src="images/Panos.jpg" width=190px/>
- 	<h4>Address</h4>
-  Department of Informatics <br/>
-  King's College London <br/>
-  Strand Campus <br/>
-  Bush House <br/>
-  30 Aldwych <br/>
-  London, WC2B 4BG <br/>
-  UK <br/>
 
-	<h4>Email</h4>
-	panagiotis.charalampopoulos[at]kcl.ac.uk <br/>
-   </div>-->
     <div id="content">
   <h2>Reviewing Duties</h2>
-      <p>
+      <p>Conferences:
         <a href='https://www.siam.org/conferences/cm/conference/soda21'>SODA 2021</a>,
         <a href='http://algo2020.di.unipi.it/ESA2020/index.html'>ESA 2020</a>,
         <a href='https://www.siam.org/Conferences/CM/Conference/sosa20'>SOSA 2020</a>,
         <a href='https://www.siam.org/Conferences/CM/Conference/soda20'>SODA 2020</a>,
         <a href='https://spire19.lbd.org.es/'>SPIRE 2019</a>,
         <a href='https://algo2019.ak.in.tum.de/index.php/menue-esa/esa-overview'>ESA 2019</a>,
-        <a href='https://www.journals.elsevier.com/theoretical-computer-science'>Theoretical Computer Science</a>,
         <a href='http://cpm2019.di.unipi.it/'>CPM 2019</a>,
-        <a href='https://www.journals.elsevier.com/information-processing-letters'>Information Processing Letters</a>,
         <a href='https://www.siam.org/Conferences/CM/Main/soda19'>SODA 2019</a>,
         <a href='http://isaac2018.ie.nthu.edu.tw/'>ISAAC 2018</a>,
         <a href='http://eventos.spc.org.pe/spire2018/'>SPIRE 2018</a>,
         <a href='http://algo2018.hiit.fi/esa/'>ESA 2018</a>,
         <a href='http://www.comp.nus.edu.sg/~iwoca18/'>IWOCA 2018</a>,
         <a href='http://cpm2018.sdu.edu.cn/'>CPM 2018</a>,
-        <a href='https://www.journals.elsevier.com/journal-of-discrete-algorithms/'>Journal of Discrete Algorithms</a>,
-        <a href='https://onlinelibrary.wiley.com/journal/1097024x'>Software: Practice and Experience</a>,
-        <a href='https://academic.oup.com/comjnl/'>The Computer Journal</a>,
         <a href='http://cse.buet.ac.bd/walcom2018/'>WALCOM 2018</a>,
         <a href='http://pages.di.unipi.it/spire2017/'>SPIRE 2017</a>,
         <a href='http://www.stringology.org/event/'>PSC 2017</a>,
         <a href='https://carma.newcastle.edu.au/meetings/iwoca/index.html'>IWOCA 2017</a>,
         <a href='https://nms.kcl.ac.uk/informatics/events/SEA2017/index.html'>SEA 2017</a>
       </p>
+
+      <p>Journals:
+        <a href='https://www.journals.elsevier.com/theoretical-computer-science'>Theoretical Computer Science</a>,
+        <a href='https://www.journals.elsevier.com/information-processing-letters'>Information Processing Letters</a>,
+        <a href='https://www.journals.elsevier.com/journal-of-discrete-algorithms/'>Journal of Discrete Algorithms</a>,
+        <a href='https://onlinelibrary.wiley.com/journal/1097024x'>Software: Practice and Experience</a>,
+        <a href='https://academic.oup.com/comjnl/'>The Computer Journal</a>.
+      </p>
+
 	<h2>Scholarships & Grants</h2>
   <ul>
-        <li>2016-present:  <a href="http://www.kcl.ac.uk/">King's College London</a> <i>NMS Faculty Studentship</i> (Graduate Teaching Scholarship up to January 2018).</li>
-        <li>2017-present:  Educational Grant by the <a href="http://www.leventisfoundation.org">A. G. Leventis Foundation</a>.</li>
-        <!--<li>February 2017:  Postgraduate Research Conference Grant by London Mathematical Society (<a href='https://www.lms.ac.uk/'>LMS</a>)</li>
-        <li>April 2017:  <a href='http://www.kcl.ac.uk/study/abroad/discover/money/grg.aspx/'>Global Research Grant</a> by <i>The Graduate School and King's Worldwide</i>, King's College London, UK</li>-->
+        <li>2016-2020:  <a href="http://www.kcl.ac.uk/">King's College London</a> <i>NMS Faculty Studentship</i> (Graduate Teaching Scholarship up to January 2018).</li>
+        <li>2017-2020:  Educational Grant by the <a href="http://www.leventisfoundation.org">A. G. Leventis Foundation</a>.</li>
   </ul>
   <h2>Other</h2>
 	<ul>
@@ -93,13 +82,6 @@ November 2016:
         <li>Prize for the best overall result for examined units across all of the M.Sc. programmes in the Department of Informatics.</li>
         <li>Prize for the best overall performance on the M.Sc. in Advanced Computing.</li>
 	</ul>
-	<h2>Talks & Presentations</h2>
-	<ul>
-        <li>June 2017:  <strong>Palindromic Decompositions with Gaps and Errors</strong>, The 12th International Computer Science Symposium in Russia (<a href='https://csr2017.kpfu.ru/welcome'>CSR 2017</a>)
-        <li>February 2017:  <strong>How to answer a small batch of RMQs or LCA queries in practice</strong>, London Stringology Days/London Algorithmic Workshop (<a href='http://www.inf.kcl.ac.uk/events/LSD&LAW17/'>LSD &amp; LAW 2017</a>)
-        <li>November 2016:  <strong>Palindromic Decompositions with Gaps and Errors</strong>, <i>National University of Singapore</i> (<a href='http://www.comp.nus.edu.sg/about/depts/cs/seminars/'>NUS</a>) </i></li>
-        </ul>
--->
       </div>
     </div>
   </div>
