--- a/activities.html
+++ b/activities.html
@@ -48,7 +48,7 @@
         <a href='http://pages.di.unipi.it/spire2017/'>SPIRE 2017</a>,
         <a href='http://www.stringology.org/event/'>PSC 2017</a>,
         <a href='https://carma.newcastle.edu.au/meetings/iwoca/index.html'>IWOCA 2017</a>,
-        <a href='https://nms.kcl.ac.uk/informatics/events/SEA2017/index.html'>SEA 2017</a>
+        <a href='https://nms.kcl.ac.uk/informatics/events/SEA2017/index.html'>SEA 2017</a>.
       </p>
 
       <p>Journals:
