--- a/teaching.html
+++ b/teaching.html
@@ -33,25 +33,25 @@
         Semester 2, 2017-2018: 
   <br></br>
   <ul>
-<li><strong><a href='https://www.kcl.ac.uk/nms/depts/informatics/study/current/handbook/progs/modules/5CCS2FC2.aspx'>Foundations of Computing II</a></strong> (B.Sc. level): Small Group Tutorials.</li>
+<li><strong>Foundations of Computing II</strong> (B.Sc. level): Small Group Tutorials.</li>
   </ul>
 Semester 1, 2017-2018: 
 	<br></br>
 	<ul>
-<li><strong><a href='https://www.kcl.ac.uk/nms/depts/informatics/study/current/handbook/progs/modules/4CCS1FC1.aspx'>Foundations of Computing I</a></strong> (B.Sc. level): Small and Large Group Tutorials.</li>
-<li><strong><a href='https://www.kcl.ac.uk/nms/depts/informatics/study/current/handbook/progs/modules/4CCS1ELA.aspx'>Elementary Logic with Applications</a></strong> (B.Sc. level): Small and Large Group Tutorials.</li>
+<li><strong>Foundations of Computing I</strong> (B.Sc. level): Small and Large Group Tutorials.</li>
+<li><strong>Elementary Logic with Applications</strong> (B.Sc. level): Small and Large Group Tutorials.</li>
 	</ul>
 Semester 2, 2016-2017: 
 	<br></br>
 	<ul>
-<li><strong><a href='https://www.kcl.ac.uk/nms/depts/informatics/study/current/handbook/progs/modules/5CCS2FC2.aspx'>Foundations of Computing II</a></strong> (B.Sc. level): Small Group Tutorials.</li>
-<li><strong><a href='http://www.kcl.ac.uk/nms/depts/informatics/study/current/handbook/progs/Modules/7CCSMTSP.aspx'>Text Searching and Processing</a></strong> (B.Sc. & M.Sc. level): Large Group Tutorials.</li>
+<li><strong>Foundations of Computing II</strong> (B.Sc. level): Small Group Tutorials.</li>
+<li><strong>Text Searching and Processing</strong> (B.Sc. & M.Sc. level): Large Group Tutorials.</li>
 	</ul>
 Semester 1, 2016-2017: 
 	<br></br>
 	<ul>
-<li><strong><a href='https://www.kcl.ac.uk/nms/depts/informatics/study/current/handbook/progs/modules/4CCS1FC1.aspx'>Foundations of Computing I</a></strong> (B.Sc. level): Small and Large Group Tutorials.</li>
-<li><strong><a href='https://www.kcl.ac.uk/nms/depts/informatics/study/current/handbook/progs/modules/7CCSMDSI.aspx'>Data Structures and their Implementation in C++</a></strong> (M.Sc. level): Large Group Tutorials.</li>
+<li><strong>Foundations of Computing I</strong> (B.Sc. level): Small and Large Group Tutorials.</li>
+<li><strong>Data Structures and their Implementation in C++</strong> (M.Sc. level): Large Group Tutorials.</li>
 	</ul>
       </div>
       <strong>Associate Fellow of the <a href='https://www.heacademy.ac.uk/'>Higher Education Academy</a>.</strong>
