--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       </div>
     <div id="content">
       <br>
-        <p>I am a Ph.D. student in Computer Science in the <a href="https://www.kcl.ac.uk/informatics">Department of Informatics</a> at <a href="http://www.kcl.ac.uk/">King's College London</a> under the supervision of <a href="https://nms.kcl.ac.uk/tomasz.radzik/">Tomasz Radzik</a> and <a href="https://homepages.cwi.nl/~solon/">Solon P. Pissis</a>.</p>
+        <p>I am a Ph.D. student in Computer Science in the <a href="https://www.idc.ac.il/en/schools/cs/pages/home.aspx">Efi Arazi School of Computer Science</a> at the <a href="https://www.idc.ac.il/en/pages/home.aspx">Interdisciplinary Center Herzliya</a> under the supervision of <a href="http://www.faculty.idc.ac.il/smozes/">Shay Mozes</a> (IDC Herzliya) and <a href="http://www.cs.haifa.ac.il/~oren/index.html">Oren Weimann</a> (<a href="https://www.haifa.ac.il/index.php/en/">University of Haifa</a>).</p>
+
+        <p>Prior to that, I was a Ph.D. student in Computer Science in the <a href="https://www.kcl.ac.uk/informatics">Department of Informatics</a> at <a href="http://www.kcl.ac.uk/">King's College London</a> under the supervision of <a href="https://nms.kcl.ac.uk/tomasz.radzik/">Tomasz Radzik</a> and <a href="https://homepages.cwi.nl/~solon/">Solon P. Pissis</a>.</p>
 
 
         <p>From October 2019 to March 2020 I was on a research internship in the <a href="http://en.uw.edu.pl/tag/informatics/">Institute of Informatics</a> at the <a href="http://en.uw.edu.pl/">University of Warsaw</a> under the supervision of <a href="https://www.mimuw.edu.pl/~jrad/">Jakub Radoszewski</a>, partially supported by grant <a href="http://total.mimuw.edu.pl/">TOTAL</a>.</p>
