--- a/activities.html
+++ b/activities.html
@@ -29,6 +29,10 @@
     <div id="site_content">
 
     <div id="content">
+
+
+  <p>I served on the PC of the 31st Annual Symposium on Combinatorial Pattern Matching (<a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>).</p>
+
   <h2>Reviewing Duties</h2>
       <p>Conferences:
         <a href='https://www.siam.org/conferences/cm/conference/soda21'>SODA 2021</a>,
