--- a/activities.html
+++ b/activities.html
@@ -31,8 +31,6 @@
     <div id="content">
 
 
-  <p>I served on the PC of the 31st Annual Symposium on Combinatorial Pattern Matching (<a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>).</p>
-
   <h2>Reviewing Duties</h2>
       <p>Conferences:
         <a href='https://www.siam.org/conferences/cm/conference/soda21'>SODA 2021</a>,
@@ -70,6 +68,7 @@
   </ul>
   <h2>Other</h2>
 	<ul>
+        <li>I served on the PC of the 31st Annual Symposium on Combinatorial Pattern Matching (<a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>).</li>
         <li>Guest Editor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
         <li>October 2016 - October 2018: Member of the Staff Student Liaison Committee (1st/2nd year PhD students' representative), Department of Informatics, King's College London.</li>
         <li>Co-chair of the 2nd Student Conference on Mathematical Foundations in Bioinformatics (<a href='https://nms.kcl.ac.uk/informatics/events/MatBio2017/'>MatBio 2017</a>).</li>
