--- a/activities.html
+++ b/activities.html
@@ -33,6 +33,7 @@
 
   <h2>Reviewing Duties</h2>
       <p>Conferences:
+        <a href='https://icde2021.gr/'>ICDE 2021</a>,
         <a href='https://www.siam.org/conferences/cm/conference/soda21'>SODA 2021</a>,
         <a href='http://algo2020.di.unipi.it/ESA2020/index.html'>ESA 2020</a>,
         <a href='https://www.siam.org/Conferences/CM/Conference/sosa20'>SOSA 2020</a>,
