--- a/activities.html
+++ b/activities.html
@@ -62,12 +62,8 @@
         <a href='https://academic.oup.com/comjnl/'>The Computer Journal</a>.
       </p>
 
-	<h2>Scholarships & Grants</h2>
-  <ul>
-        <li>2016-2020:  <a href="http://www.kcl.ac.uk/">King's College London</a> <i>NMS Faculty Studentship</i> (Graduate Teaching Scholarship up to January 2018).</li>
-        <li>2017-2020:  Educational Grant by the <a href="http://www.leventisfoundation.org">A. G. Leventis Foundation</a>.</li>
-  </ul>
-  <h2>Other</h2>
+
+  <h2>Other Academic Service</h2>
 	<ul>
         <li>I served on the PC of the 31st Annual Symposium on Combinatorial Pattern Matching (<a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>).</li>
         <li>Guest Coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
@@ -77,7 +73,11 @@
         <li>Member of the Organising Committee for London Stringology Days/London Algorithmic Workshop (<a href='http://www.inf.kcl.ac.uk/events/LSD&LAW17/'>LSD &amp; LAW 2017</a>).</li>
 	     <!--<li>November 2016 - present: Student member of the Centre for Combinatorics on Words and Applications (<a href='https://ccwaperth.wordpress.com/'>CCWA</a>), Murdoch University, Perth, Australia.</li>-->
 	</ul>
-	
+	 <h2>Scholarships & Grants</h2>
+  <ul>
+        <li>2016-2020:  <a href="http://www.kcl.ac.uk/">King's College London</a> <i>NMS Faculty Studentship</i> (Graduate Teaching Scholarship up to January 2018).</li>
+        <li>2017-2020:  Educational Grant by the <a href="http://www.leventisfoundation.org">A. G. Leventis Foundation</a>.</li>
+  </ul>
   <!--	<h2>Awards & Honours</h2>
 November 2016: 
 <br></br>
