--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,7 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
-    <li><strong>Faster Approximate Pattern Matching: A Unified Approach</strong> [<a href="https://arxiv.org/abs/2004.08350">arxiv</a>]<br> P. Charalampopoulos, T. Kociumaka and P. Wellnitz<br><a href="https://focs2020.cs.duke.edu/">FOCS 2020</a>. </li>
+    <li><strong>Faster Approximate Pattern Matching: A Unified Approach</strong> [<a href="https://doi.org/10.1109/FOCS46700.2020.00095">doi</a>] [<a href="https://arxiv.org/abs/2004.08350">arxiv</a>]<br> P. Charalampopoulos, T. Kociumaka and P. Wellnitz<br><a href="https://focs2020.cs.duke.edu/">FOCS 2020: 978-989</a>. </li>
     <li><strong>Efficient Enumeration of Distinct Factors Using Package Representations</strong> [<a href="https://doi.org/10.1007/978-3-030-59212-7\_18">doi</a>] [<a href="slides/Packages.pdf">slides</a>] <br>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba<br><a href="https://www.cs.ucf.edu/spire2020/">SPIRE 2020</a>: 247-261. </li>
     <li><strong>SMART: SuperMaximal Approximate Repeats Tool</strong> [<a href="https://doi.org/10.1145/3388440.3414210">doi</a>]<br> L. A. K. Ayad, P. Charalampopoulos and S. P. Pissis<br> <a href="https://acm-bcb.org/2020/">BCB 2020</a>: 17:1.</li>
     <li><strong>The Number of Repetitions in 2D-Strings</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2020.32">doi</a>] [<a href="https://arxiv.org/abs/2006.15999">arxiv</a>]<br>P. Charalampopoulos, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba<br>  <a href="http://algo2020.di.unipi.it/ESA2020/index.html">ESA 2020</a>: 32:1-32:18.</li>
