--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,8 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
+    <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://arxiv.org/abs/1811.01551">arxiv</a>]
+    <br>A. Bar-Natan, P. Charalampopoulos, P. Gawrychowski, S. Mozes and O. Weimann<br> <a href="https://sirocco2021.ii.uni.wroc.pl/">SIROCCO 2021/</a>.</li>
     <li><strong>Faster Approximate Pattern Matching: A Unified Approach</strong> [<a href="https://doi.org/10.1109/FOCS46700.2020.00095">doi</a>] [<a href="https://arxiv.org/abs/2004.08350">arxiv</a>]<br> P. Charalampopoulos, T. Kociumaka and P. Wellnitz<br><a href="https://focs2020.cs.duke.edu/">FOCS 2020</a>: 978-989. </li>
     <li><strong>Efficient Enumeration of Distinct Factors Using Package Representations</strong> [<a href="https://doi.org/10.1007/978-3-030-59212-7\_18">doi</a>] [<a href="slides/Packages.pdf">slides</a>] <br>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba<br><a href="https://www.cs.ucf.edu/spire2020/">SPIRE 2020</a>: 247-261. </li>
     <li><strong>SMART: SuperMaximal Approximate Repeats Tool</strong> [<a href="https://doi.org/10.1145/3388440.3414210">doi</a>]<br> L. A. K. Ayad, P. Charalampopoulos and S. P. Pissis<br> <a href="https://acm-bcb.org/2020/">BCB 2020</a>: 17:1.</li>
