--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,8 @@
 <div id="content" style="width: 800px;">
   <h2>Preprints</h2>
   <ul style="list-style: none;">
+  <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>]
+  <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes and O. Weimann<br>.</li>
   <li><strong>Pattern Masking for Dictionary Matching</strong> [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br> P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis and J. Radoszewski</li>
   </ul>
 
