--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@
   <h2>Preprints</h2>
   <ul style="list-style: none;">
   <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>]
-  <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes and O. Weimann<br>.</li>
+  <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes and O. Weimann<br></li>
   <li><strong>Pattern Masking for Dictionary Matching</strong> [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br> P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis and J. Radoszewski</li>
   </ul>
 
