--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
         <h2>Education</h2>
         <ul>
-	       <li><strong>2016-2020 (expected): Ph.D. in Computer Science, <a href="http://www.kcl.ac.uk/">King's College London</a>, UK</strong></li>
+	       <li><strong>2016-2020: Ph.D. in Computer Science, <a href="http://www.kcl.ac.uk/">King's College London</a>, UK</strong></li>
 	       <li><strong>2015-2016: M.Sc. in Advanced Computing, <a href="http://www.kcl.ac.uk/">King's College London</a>, UK</strong></li>
          <li><strong>2010-2013: M.A., B.A. in Mathematics, <a href="https://www.cam.ac.uk/">University of Cambridge</a>, UK</strong></ul>
   </div>
