--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,8 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
+    <li><strong>Internal Shortest Absent Word Queries</strong><br>G. Badkobeh, P. Charalampopoulos and S. P. Pissis<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
+    <li><strong>Computing Covers of 2D-Strings</strong><br>P. Charalampopoulos, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
     <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
     <br>A. Bar-Natan, P. Charalampopoulos, P. Gawrychowski, S. Mozes and O. Weimann<br> <a href="https://sirocco2021.ii.uni.wroc.pl/">SIROCCO 2021</a>.</li>
     <li><strong>Faster Approximate Pattern Matching: A Unified Approach</strong> [<a href="https://doi.org/10.1109/FOCS46700.2020.00095">doi</a>] [<a href="https://arxiv.org/abs/2004.08350">arxiv</a>]<br> P. Charalampopoulos, T. Kociumaka and P. Wellnitz<br><a href="https://focs2020.cs.duke.edu/">FOCS 2020</a>: 978-989. </li>
