--- a/publications.html
+++ b/publications.html
@@ -31,13 +31,13 @@
 <div id="content" style="width: 800px;">
   <h2>Preprints</h2>
   <ul style="list-style: none;">
-  <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>]
-  <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes and O. Weimann<br></li>
   <li><strong>Pattern Masking for Dictionary Matching</strong> [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br> P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis and J. Radoszewski</li>
   </ul>
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
+    <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>]
+    <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes and O. Weimann<br> <a href="http://easyconferences.eu/icalp2021/">ICALP 2021</a>.</li>
     <li><strong>Internal Shortest Absent Word Queries</strong><br>G. Badkobeh, P. Charalampopoulos and S. P. Pissis<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
     <li><strong>Computing Covers of 2D-Strings</strong><br>P. Charalampopoulos, J. Radoszewski, W. Rytter, T. Wale&#324 and W. Zuba<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
     <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
