--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,7 @@
 <div id="content" style="width: 800px;">
   <h2>Preprints</h2>
   <ul style="list-style: none;">
+    <li><strong>Internal Shortest Absent Word Queries in Constant Time and Linear Space</strong> [<a href="https://arxiv.org/abs/2106.01763">arxiv</a>]<br>G. Badkobeh, P. Charalampopoulos, D. Kosolobov, S. P. Pissis.</li>
     <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]<br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski.</li>
     <li><strong>Pattern Masking for Dictionary Matching</strong> [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br> P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis, J. Radoszewski.</li>
   </ul>
@@ -77,7 +78,7 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
-    <li><strong>Internal Dictionary Matching</strong> [<a href="https://doi.org/10.1007/s00453-021-00821-y">doi</a>] [<a href="https://arxiv.org/abs/1909.11577">arxiv</a>] [<a href="slides/IDM.pdf">slides</a>]<br>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter, T. Wale&#324<br>Algorithmica (2021).</li>
+    <li><strong>Internal Dictionary Matching</strong> [<a href="https://doi.org/10.1007/s00453-021-00821-y">doi</a>] [<a href="papers/IDM.pdf">pdf</a>] [<a href="https://arxiv.org/abs/1909.11577">arxiv</a>] [<a href="slides/IDM.pdf">slides</a>]<br>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter, T. Wale&#324<br>Algorithmica (2021).</li>
     <li><strong>Circular Pattern Matching with k Mismatches</strong> [<a href="https://doi.org/10.1016/j.jcss.2020.07.003">doi</a>] [<a href="https://arxiv.org/abs/1907.01815">arxiv</a>]<br> P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324, W. Zuba<br> Journal of Computer and System Sciences, Volume 115, Pages 73-85 (2021).</li>
     <li><strong>Dynamic and Internal Longest Common Substring</strong> [<a href="https://doi.org/10.1007/s00453-020-00744-0">doi</a>] [<a href="https://arxiv.org/abs/1804.08731">arxiv</a>]<br> A. Amir, P. Charalampopoulos, S. P. Pissis, J. Radoszewski<br> Algorithmica 82(12): 3707-3743 (2020).</li>
     <li><strong>Property Suffix Array with Applications in Indexing Weighted Sequences</strong> [<a href="https://doi.org/10.1145/3385898">doi</a>]<br>P. Charalampopoulos, C. S. Iliopoulos, C. Liu, S. P. Pissis<br>  ACM Journal of Experimental Algorithmics, Volume 25, No. 1, pages 1.8:1-1.8:16 (2020).</li>
