--- a/publications.html
+++ b/publications.html
@@ -32,12 +32,12 @@
   <h2>Preprints</h2>
   <ul style="list-style: none;">
     <li><strong>Internal Shortest Absent Word Queries in Constant Time and Linear Space</strong> [<a href="https://arxiv.org/abs/2106.01763">arxiv</a>]<br>G. Badkobeh, P. Charalampopoulos, D. Kosolobov, S. P. Pissis.</li>
-    <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]<br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski.</li>
     <li><strong>Pattern Masking for Dictionary Matching</strong> [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br> P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis, J. Radoszewski.</li>
   </ul>
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
+    <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]<br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> <a href="http://algo2021.tecnico.ulisboa.pt/ESA2021/">ESA 2021</a>.</li>
     <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> <a href="http://easyconferences.eu/icalp2021/">ICALP 2021</a>.</li>
     <li><strong>Internal Shortest Absent Word Queries</strong><br>G. Badkobeh, P. Charalampopoulos, S. P. Pissis<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
