--- a/publications.html
+++ b/publications.html
@@ -38,11 +38,11 @@
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
     <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]<br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> <a href="http://algo2021.tecnico.ulisboa.pt/ESA2021/">ESA 2021</a>.</li>
-    <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>]
+    <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>] [<a href="slides/ED_Oracle.pdf">slides</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> <a href="http://easyconferences.eu/icalp2021/">ICALP 2021</a>.</li>
     <li><strong>Internal Shortest Absent Word Queries</strong><br>G. Badkobeh, P. Charalampopoulos, S. P. Pissis<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
     <li><strong>Computing Covers of 2D-Strings</strong><br>P. Charalampopoulos, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
-    <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
+    <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://doi.org/10.1007/978-3-030-79527-6\_18">doi</a>] [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
     <br>A. Bar-Natan, P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> <a href="https://sirocco2021.ii.uni.wroc.pl/">SIROCCO 2021</a>.</li>
     <li><strong>Faster Approximate Pattern Matching: A Unified Approach</strong> [<a href="https://doi.org/10.1109/FOCS46700.2020.00095">doi</a>] [<a href="https://arxiv.org/abs/2004.08350">arxiv</a>]<br> P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br><a href="https://focs2020.cs.duke.edu/">FOCS 2020</a>: 978-989. </li>
     <li><strong>Efficient Enumeration of Distinct Factors Using Package Representations</strong> [<a href="https://doi.org/10.1007/978-3-030-59212-7_18">doi</a>] [<a href="slides/Packages.pdf">slides</a>] <br>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br><a href="https://www.cs.ucf.edu/spire2020/">SPIRE 2020</a>: 247-261. </li>
@@ -78,7 +78,7 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
-    <li><strong>Internal Dictionary Matching</strong> [<a href="https://doi.org/10.1007/s00453-021-00821-y">doi</a>] [<a href="papers/IDM.pdf">pdf</a>] [<a href="https://arxiv.org/abs/1909.11577">arxiv</a>] [<a href="slides/IDM.pdf">slides</a>]<br>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter, T. Wale&#324<br>Algorithmica (2021).</li>
+    <li><strong>Internal Dictionary Matching</strong> [<a href="https://doi.org/10.1007/s00453-021-00821-y">doi</a>] [<a href="papers/IDM.pdf">pdf</a>] [<a href="https://arxiv.org/abs/1909.11577">arxiv</a>] [<a href="slides/IDM.pdf">slides</a>]<br>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter, T. Wale&#324<br>Algorithmica 83(7): 2142-2169 (2021).</li>
     <li><strong>Circular Pattern Matching with k Mismatches</strong> [<a href="https://doi.org/10.1016/j.jcss.2020.07.003">doi</a>] [<a href="https://arxiv.org/abs/1907.01815">arxiv</a>]<br> P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Strazy&#324ski, T. Wale&#324, W. Zuba<br> Journal of Computer and System Sciences, Volume 115, Pages 73-85 (2021).</li>
     <li><strong>Dynamic and Internal Longest Common Substring</strong> [<a href="https://doi.org/10.1007/s00453-020-00744-0">doi</a>] [<a href="https://arxiv.org/abs/1804.08731">arxiv</a>]<br> A. Amir, P. Charalampopoulos, S. P. Pissis, J. Radoszewski<br> Algorithmica 82(12): 3707-3743 (2020).</li>
     <li><strong>Property Suffix Array with Applications in Indexing Weighted Sequences</strong> [<a href="https://doi.org/10.1145/3385898">doi</a>]<br>P. Charalampopoulos, C. S. Iliopoulos, C. Liu, S. P. Pissis<br>  ACM Journal of Experimental Algorithmics, Volume 25, No. 1, pages 1.8:1-1.8:16 (2020).</li>
