--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
     <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> <a href="http://easyconferences.eu/icalp2021/">ICALP 2021</a>.</li>
     <li><strong>Internal Shortest Absent Word Queries</strong><br>G. Badkobeh, P. Charalampopoulos, S. P. Pissis<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
     <li><strong>Computing Covers of 2D-Strings</strong><br>P. Charalampopoulos, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
-    <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://doi.org/10.1007/978-3-030-79527-6\_18">doi</a>] [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
+    <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://doi.org/10.1007/978-3-030-79527-6_18">doi</a>] [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
     <br>A. Bar-Natan, P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> <a href="https://sirocco2021.ii.uni.wroc.pl/">SIROCCO 2021</a>.</li>
     <li><strong>Faster Approximate Pattern Matching: A Unified Approach</strong> [<a href="https://doi.org/10.1109/FOCS46700.2020.00095">doi</a>] [<a href="https://arxiv.org/abs/2004.08350">arxiv</a>]<br> P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br><a href="https://focs2020.cs.duke.edu/">FOCS 2020</a>: 978-989. </li>
     <li><strong>Efficient Enumeration of Distinct Factors Using Package Representations</strong> [<a href="https://doi.org/10.1007/978-3-030-59212-7_18">doi</a>] [<a href="slides/Packages.pdf">slides</a>] <br>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br><a href="https://www.cs.ucf.edu/spire2020/">SPIRE 2020</a>: 247-261. </li>
