--- a/publications.html
+++ b/publications.html
@@ -37,11 +37,14 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
-    <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]<br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> <a href="http://algo2021.tecnico.ulisboa.pt/ESA2021/">ESA 2021</a>.</li>
+    <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]
+      <br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> <a href="http://algo2021.tecnico.ulisboa.pt/ESA2021/">ESA 2021</a>.</li>
     <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>] [<a href="slides/ED_Oracle.pdf">slides</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> <a href="http://easyconferences.eu/icalp2021/">ICALP 2021</a>.</li>
-    <li><strong>Internal Shortest Absent Word Queries</strong><br>G. Badkobeh, P. Charalampopoulos, S. P. Pissis<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
-    <li><strong>Computing Covers of 2D-Strings</strong><br>P. Charalampopoulos, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>.</li>
+    <li><strong>Internal Shortest Absent Word Queries</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2021.6">doi</a>] 
+    <br>G. Badkobeh, P. Charalampopoulos, S. P. Pissis<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>: 6:1–6:18.</li>
+    <li><strong>Computing Covers of 2D-Strings</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2021.12">doi</a>] 
+    <br>P. Charalampopoulos, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>: 12:1–12:20.</li>
     <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://doi.org/10.1007/978-3-030-79527-6_18">doi</a>] [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
     <br>A. Bar-Natan, P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> <a href="https://sirocco2021.ii.uni.wroc.pl/">SIROCCO 2021</a>: 315-333.</li>
     <li><strong>Faster Approximate Pattern Matching: A Unified Approach</strong> [<a href="https://doi.org/10.1109/FOCS46700.2020.00095">doi</a>] [<a href="https://arxiv.org/abs/2004.08350">arxiv</a>]<br> P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br><a href="https://focs2020.cs.duke.edu/">FOCS 2020</a>: 978-989. </li>
