--- a/publications.html
+++ b/publications.html
@@ -81,6 +81,7 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
+    <li><strong>Single-Source Shortest Paths and Strong Connectivity in Dynamic Planar Graphs</strong> [<a href="papers/Dyn_SSSP_SCC.pdf">pdf</a>] [<a href="slides/Dyn_SSSP_SCC.pdf">slides</a>] [<a href="https://www.youtube.com/watch?v=sG7KsfrxbKA&ab_channel=ConferenceALGO2020">talk</a>]<br>P. Charalampopoulos, A. Karczmarz<br>  Journal of Computer and System Sciences. </li>
     <li><strong>Internal Dictionary Matching</strong> [<a href="https://doi.org/10.1007/s00453-021-00821-y">doi</a>] [<a href="papers/IDM.pdf">pdf</a>] [<a href="https://arxiv.org/abs/1909.11577">arxiv</a>] [<a href="slides/IDM.pdf">slides</a>]<br>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter, T. Wale&#324<br>Algorithmica 83(7): 2142-2169 (2021).</li>
     <li><strong>Circular Pattern Matching with k Mismatches</strong> [<a href="https://doi.org/10.1016/j.jcss.2020.07.003">doi</a>] [<a href="https://arxiv.org/abs/1907.01815">arxiv</a>]<br> P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Straszy&#324ski, T. Wale&#324, W. Zuba<br> Journal of Computer and System Sciences, Volume 115, Pages 73-85 (2021).</li>
     <li><strong>Dynamic and Internal Longest Common Substring</strong> [<a href="https://doi.org/10.1007/s00453-020-00744-0">doi</a>] [<a href="https://arxiv.org/abs/1804.08731">arxiv</a>]<br> A. Amir, P. Charalampopoulos, S. P. Pissis, J. Radoszewski<br> Algorithmica 82(12): 3707-3743 (2020).</li>
