--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
 	       <li><strong>2016-2020: Ph.D. in Computer Science, <a href="http://www.kcl.ac.uk/">King's College London</a>, UK</strong></li>
 	       <li><strong>2015-2016: M.Sc. in Advanced Computing, <a href="http://www.kcl.ac.uk/">King's College London</a>, UK</strong></li>
-         <li><strong>2010-2013: M.A., B.A. in Mathematics, <a href="https://www.cam.ac.uk/">University of Cambridge</a>, UK</strong></ul>
+         <li><strong>2010-2013: B.A. in Mathematics, <a href="https://www.cam.ac.uk/">University of Cambridge</a>, UK</strong></ul>
   </div>
 </body>
 </html>
