--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     <div id="content">
       <br>
-        <p>I am a postdoctoral fellow in the <a href="https://www.idc.ac.il/en/schools/cs/pages/home.aspx">Efi Arazi School of Computer Science</a> at the <a href="https://www.idc.ac.il/en/pages/home.aspx">Interdisciplinary Center Herzliya</a> under the supervision of <a href="http://www.faculty.idc.ac.il/smozes/">Shay Mozes</a> (IDC Herzliya) and <a href="http://www.cs.haifa.ac.il/~oren/index.html">Oren Weimann</a> (<a href="https://www.haifa.ac.il/index.php/en/">University of Haifa</a>).</p>
+        <p>I am a postdoctoral fellow in the <a href="https://www.idc.ac.il/en/schools/cs/pages/home.aspx">Efi Arazi School of Computer Science</a> at the <a href="https://www.idc.ac.il/en/pages/home.aspx">Reichman University</a> (IDC Herzliya) under the supervision of <a href="http://www.faculty.idc.ac.il/smozes/">Shay Mozes</a> and <a href="http://www.cs.haifa.ac.il/~oren/index.html">Oren Weimann</a> (<a href="https://www.haifa.ac.il/index.php/en/">University of Haifa</a>).</p>
 
         <p>Prior to that, I was a Ph.D. student in Computer Science in the <a href="https://www.kcl.ac.uk/informatics">Department of Informatics</a> at <a href="http://www.kcl.ac.uk/">King's College London</a> under the supervision of <a href="https://nms.kcl.ac.uk/tomasz.radzik/">Tomasz Radzik</a> and <a href="https://homepages.cwi.nl/~solon/">Solon P. Pissis</a>.</p>
 
