--- a/activities.html
+++ b/activities.html
@@ -33,6 +33,7 @@
 
   <h2>Reviewing Duties</h2>
       <p>Conferences:
+        <a href='https://www.stringology.org/event/CPM2022/'>CPM 2022</a>,
         <a href='https://www.cristal.univ-lille.fr/spire2021/'>SPIRE 2021</a>,
         <a href='https://icde2021.gr/'>ICDE 2021</a>,
         <a href='https://www.siam.org/conferences/cm/conference/soda21'>SODA 2021</a>,
@@ -56,6 +57,7 @@
       </p>
 
       <p>Journals:
+        <a href='https://www.springer.com/journal/224'>Theory of Computing Systems</a>,
         <a href='https://www.journals.elsevier.com/theoretical-computer-science'>Theoretical Computer Science</a>,
         <a href='https://www.journals.elsevier.com/information-processing-letters'>Information Processing Letters</a>,
         <a href='https://www.journals.elsevier.com/journal-of-discrete-algorithms/'>Journal of Discrete Algorithms</a>,
