--- a/teaching.html
+++ b/teaching.html
@@ -29,30 +29,16 @@
     <div id="site_content">
 
     <div id="content">
-        <h2>Teaching Assistant</h2>
-        Semester 2, 2017-2018: 
-  <br></br>
-  <ul>
-<li><strong>Foundations of Computing II</strong> (B.Sc. level): Small Group Tutorials.</li>
-  </ul>
-Semester 1, 2017-2018: 
-	<br></br>
-	<ul>
-<li><strong>Foundations of Computing I</strong> (B.Sc. level): Small and Large Group Tutorials.</li>
-<li><strong>Elementary Logic with Applications</strong> (B.Sc. level): Small and Large Group Tutorials.</li>
-	</ul>
-Semester 2, 2016-2017: 
-	<br></br>
-	<ul>
-<li><strong>Foundations of Computing II</strong> (B.Sc. level): Small Group Tutorials.</li>
-<li><strong>Text Searching and Processing</strong> (B.Sc. & M.Sc. level): Large Group Tutorials.</li>
-	</ul>
-Semester 1, 2016-2017: 
-	<br></br>
-	<ul>
-<li><strong>Foundations of Computing I</strong> (B.Sc. level): Small and Large Group Tutorials.</li>
-<li><strong>Data Structures and their Implementation in C++</strong> (M.Sc. level): Large Group Tutorials.</li>
-	</ul>
+        <h2>King's College London</h2>
+        Teaching Assistant:
+        <br></br>
+        <ul>
+          <li><strong>Elementary Logic with Applications</strong> (B.Sc. level): Small and Large Group Tutorials. (2017-2018)</li>
+          <li><strong>Foundations of Computing II</strong> (B.Sc. level): Small Group Tutorials. (2016-2017, 2017-2018)</li>
+          <li><strong>Foundations of Computing I</strong> (B.Sc. level): Small and Large Group Tutorials. (2016-2017, 2017-2018)</li>
+          <li><strong>Text Searching and Processing</strong> (B.Sc. & M.Sc. level): Large Group Tutorials. (2016-2017)</li>
+          <li><strong>Data Structures and their Implementation in C++</strong> (M.Sc. level): Large Group Tutorials. (2016-2017)</li>
+	     </ul>
       </div>
       <strong>Associate Fellow of the <a href='https://www.heacademy.ac.uk/'>Higher Education Academy</a>.</strong>
     </div>
