--- a/activities.html
+++ b/activities.html
@@ -33,6 +33,7 @@
 
   <h2>Reviewing Duties</h2>
       <p>Conferences:
+        <a href='https://algo2022.eu/esa/'>ESA 2022</a>,
         <a href='https://www.stringology.org/event/CPM2022/'>CPM 2022</a>,
         <a href='https://www.cristal.univ-lille.fr/spire2021/'>SPIRE 2021</a>,
         <a href='https://icde2021.gr/'>ICDE 2021</a>,
@@ -69,28 +70,14 @@
   <h2>Other Academic Service</h2>
 	<ul>
         <li>I served on the PC of the 31st Annual Symposium on Combinatorial Pattern Matching (<a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>).</li>
-        <li>Guest Coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
-        <li>October 2016 - October 2018: Member of the Staff Student Liaison Committee (1st/2nd year PhD students' representative), Department of Informatics, King's College London.</li>
+        <li>Guest coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
         <li>Co-chair of the 2nd Student Conference on Mathematical Foundations in Bioinformatics (<a href='https://nms.kcl.ac.uk/informatics/events/MatBio2017/'>MatBio 2017</a>).</li>
         <li>Member of the Organising Committee for the 16th International Symposium on Experimental Algorithms (<a href='https://nms.kcl.ac.uk/informatics/events/SEA2017/index.html'>SEA 2017</a>).</li>
         <li>Member of the Organising Committee for London Stringology Days/London Algorithmic Workshop (<a href='http://www.inf.kcl.ac.uk/events/LSD&LAW17/'>LSD &amp; LAW 2017</a>).</li>
-	     <!--<li>November 2016 - present: Student member of the Centre for Combinatorics on Words and Applications (<a href='https://ccwaperth.wordpress.com/'>CCWA</a>), Murdoch University, Perth, Australia.</li>-->
+        <li>1st/2nd year Ph.D. students' Representative} in the Staff Student Liaison Committee, Department of Informatics, King's College London.</li>
 	</ul>
-	 <h2>Scholarships & Grants</h2>
+	<h2>Scholarships & Grants</h2>
   <ul>
         <li>2016-2020:  <a href="http://www.kcl.ac.uk/">King's College London</a> <i>NMS Faculty Studentship</i> (Graduate Teaching Scholarship up to January 2018).</li>
         <li>2017-2020:  Educational Grant by the <a href="http://www.leventisfoundation.org">A. G. Leventis Foundation</a>.</li>
   </ul>
-  <!--	<h2>Awards & Honours</h2>
-November 2016: 
-<br></br>
-	<ul>
-        <li><i>Charles Babbage M.Sc. Prize</i> for exceptional performance across all M.Sc. programmes in the Department of Informatics.</li>
-        <li>Prize for the best overall result for examined units across all of the M.Sc. programmes in the Department of Informatics.</li>
-        <li>Prize for the best overall performance on the M.Sc. in Advanced Computing.</li>
-	</ul>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
