--- a/index.html
+++ b/index.html
@@ -29,18 +29,22 @@
     <div id="site_content">
       <div class="sidebar">
   <img src="images/Panos.jpg" width=190px/>
-	<h4>Email</h4>
-	panagiotis.charalampopoulos[at]kcl.ac.uk <br/>
+	<h4>Address</h4>
+	Department of Computer Science and Information Systems<br/>
+  Birkbeck, University of London<br/>
+  Malet Street<br/>
+  London WC1E 7HX<br/>
+  <h4>Email</h4>
+  panagiotis.charalampopoulos[at]kcl.ac.uk <br/>
       </div>
     <div id="content">
       <br>
-        <p>I am a postdoctoral fellow in the <a href="https://www.idc.ac.il/en/schools/cs/pages/home.aspx">Efi Arazi School of Computer Science</a> at <a href="https://www.idc.ac.il/en/pages/home.aspx">Reichman University</a> (IDC Herzliya) under the supervision of <a href="http://www.faculty.idc.ac.il/smozes/">Shay Mozes</a> and <a href="http://www.cs.haifa.ac.il/~oren/index.html">Oren Weimann</a> (<a href="https://www.haifa.ac.il/index.php/en/">University of Haifa</a>).</p>
+        <p>I am a Lecturer in the <a href="https://www.dcs.bbk.ac.uk/">Department of Computer Science and Information Systems</a> at <a href="https://www.bbk.ac.uk/">Birkbeck, University of London</a>.</p>
 
-        <p>Prior to that, I was a Ph.D. student in Computer Science in the <a href="https://www.kcl.ac.uk/informatics">Department of Informatics</a> at <a href="http://www.kcl.ac.uk/">King's College London</a> under the supervision of <a href="https://nms.kcl.ac.uk/tomasz.radzik/">Tomasz Radzik</a> and <a href="https://homepages.cwi.nl/~solon/">Solon P. Pissis</a>.</p>
+        <p>Prior to that, I was a postdoctoral fellow in the <a href="https://www.idc.ac.il/en/schools/cs/pages/home.aspx">Efi Arazi School of Computer Science</a> at <a href="https://www.idc.ac.il/en/pages/home.aspx">Reichman University</a> (IDC Herzliya) under the supervision of <a href="http://www.faculty.idc.ac.il/smozes/">Shay Mozes</a> and <a href="http://www.cs.haifa.ac.il/~oren/index.html">Oren Weimann</a> (<a href="https://www.haifa.ac.il/index.php/en/">University of Haifa</a>).</p>
 
-
-        <p>During my Ph.D. studies, I completed a 6-month research internship in the <a href="http://en.uw.edu.pl/tag/informatics/">Institute of Informatics</a> at the <a href="http://en.uw.edu.pl/">University of Warsaw</a> under the supervision of <a href="https://www.mimuw.edu.pl/~jrad/">Jakub Radoszewski</a>, partially supported by grant <a href="http://total.mimuw.edu.pl/">TOTAL</a>, and a 5-month research internship at IDC Herzliya.</p>
-        <!--<p>From April 2018 to September 2018 I was on a research internship in the <a href="https://www.idc.ac.il/en/schools/cs/pages/home.aspx">Efi Arazi School of Computer Science</a> at the <a href="https://www.idc.ac.il/en/pages/home.aspx">Interdisciplinary Center Herzliya</a> under the supervision of <a href="http://www.faculty.idc.ac.il/smozes/">Shay Mozes</a> (IDC Herzliya) and <a href="http://www.cs.haifa.ac.il/~oren/index.html">Oren Weimann</a> (<a href="https://www.haifa.ac.il/index.php/en/">University of Haifa</a>).</p>-->
+        <p>I completed my Ph.D. student in Computer Science in the <a href="https://www.kcl.ac.uk/informatics/">Department of Informatics</a> at <a href="http://www.kcl.ac.uk/">King's College London</a> under the supervision of <a href="https://nms.kcl.ac.uk/tomasz.radzik/">Tomasz Radzik</a> and <a href="https://homepages.cwi.nl/~solon/">Solon P. Pissis</a>.
+        During my Ph.D. studies, I completed a 6-month research internship in the <a href="http://en.uw.edu.pl/tag/informatics/">Institute of Informatics</a> at the <a href="http://en.uw.edu.pl/">University of Warsaw</a> under the supervision of <a href="https://www.mimuw.edu.pl/~jrad/">Jakub Radoszewski</a>, partially supported by grant <a href="http://total.mimuw.edu.pl/">TOTAL</a>, and a 5-month research internship at IDC Herzliya.</p>
 
         <h2>Research Interests</h2>
         
@@ -50,7 +54,8 @@
         <ul>
 	       <li><strong>2016-2020: Ph.D. in Computer Science, <a href="http://www.kcl.ac.uk/">King's College London</a>, UK</strong></li>
 	       <li><strong>2015-2016: M.Sc. in Advanced Computing, <a href="http://www.kcl.ac.uk/">King's College London</a>, UK</strong></li>
-         <li><strong>2010-2013: B.A. in Mathematics, <a href="https://www.cam.ac.uk/">University of Cambridge</a>, UK</strong></ul>
+         <li><strong>2010-2013: B.A. in Mathematics, <a href="https://www.cam.ac.uk/">University of Cambridge</a>, UK</strong>
+        </ul>
   </div>
 </body>
 </html>
