--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   Malet Street<br/>
   London WC1E 7HX<br/>
   <h4>Email</h4>
-  panagiotis.charalampopoulos[at]kcl.ac.uk <br/>
+  p.charalampopoulos[at]bbk.ac.uk <br/>
       </div>
     <div id="content">
       <br>
