--- a/publications.html
+++ b/publications.html
@@ -29,13 +29,15 @@
     <div id="site_content">
 
 <div id="content" style="width: 800px;">
-  <h2>Preprints</h2>
+  <!--<h2>Preprints</h2>
   <ul style="list-style: none;">
-    <li><strong>Faster Pattern Matching Under Edit Distance</strong> [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>]<br>P. Charalampopoulos, T. Kociumaka, P. Wellnitz.</li>
-  </ul>
+  </ul>-->
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
+    <li><strong>Faster Pattern Matching Under Edit Distance</strong> [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>]
+    <br>P. Charalampopoulos, T. Kociumaka, P. Wellnitz
+    <br><a href="https://focs2022.eecs.berkeley.edu/">FOCS 2022</a>.</li>
     <li><strong>Approximate Circular Pattern Matching</strong>
     <br>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, S. P. Pissis, W. Rytter, T. Wale&#324, W. Zuba<br>  <a href="https://algo2022.eu/esa/">ESA 2022</a>.</li>
     <li><strong>Longest Palindromic Substring in Sublinear Time</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2022.20">doi</a>]<br> P. Charalampopoulos, S. P. Pissis, J. Radoszewski<br> <a href="https://www.stringology.org/event/CPM2022/">CPM 2022</a>: 20:1–20:9.</li>
