--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
     <li><strong>Faster Pattern Matching Under Edit Distance</strong> [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>]
     <br>P. Charalampopoulos, T. Kociumaka, P. Wellnitz
     <br><a href="https://focs2022.eecs.berkeley.edu/">FOCS 2022</a>.</li>
-    <li><strong>Approximate Circular Pattern Matching</strong> [<a href="https://arxiv.org/abs/2208.08915">arxiv</a>]
+    <li><strong>Approximate Circular Pattern Matching</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2022.35">doi</a>] [<a href="https://arxiv.org/abs/2208.08915">arxiv</a>]
     <br>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, S. P. Pissis, W. Rytter, T. Wale&#324, W. Zuba<br>  <a href="https://algo2022.eu/esa/">ESA 2022</a>.</li>
     <li><strong>Longest Palindromic Substring in Sublinear Time</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2022.20">doi</a>]<br> P. Charalampopoulos, S. P. Pissis, J. Radoszewski<br> <a href="https://www.stringology.org/event/CPM2022/">CPM 2022</a>: 20:1–20:9.</li>
     <li><strong>Pattern Masking for Dictionary Matching</strong> [<a href="https://doi.org/10.4230/LIPIcs.ISAAC.2021.65">doi</a>] [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br> P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis, J. Radoszewski<br> <a href="https://tcs.inf.kyushu-u.ac.jp/isaac2021/">ISAAC 2021</a>: 65:1-65:19.</li>
