--- a/teaching.html
+++ b/teaching.html
@@ -28,6 +28,13 @@
     </div>
     <div id="site_content">
 
+
+    <div id="content">
+        <h2>Birkbeck, University of London</h2>
+        <br></br>
+        <p>In the summer term, Irene Muzi and I will be teaching <a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a>..</p>
+      </div>
+
     <div id="content">
         <h2>King's College London</h2>
         Teaching Assistant:
