--- a/activities.html
+++ b/activities.html
@@ -28,9 +28,18 @@
     </div>
     <div id="site_content">
 
+  <div class="sidebar">
+    <img src="images/Panos.jpg" width=190px/>
+    <h4>Address</h4>
+    Department of Computer Science and Information Systems<br/>
+    Birkbeck, University of London<br/>
+    Malet Street<br/>
+    London WC1E 7HX<br/>
+    <h4>Email</h4>
+    p.charalampopoulos[at]bbk.ac.uk <br/>
+  </div>
+
     <div id="content">
-
-
   <h2>Reviewing Duties</h2>
       <p>Conferences:
         <a href='https://algo2022.eu/esa/'>ESA 2022</a>,
