--- a/teaching.html
+++ b/teaching.html
@@ -6,7 +6,7 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-  <link rel="stylesheet" type="text/css" href="style/style2.css" />
+  <link rel="stylesheet" type="text/css" href="style/style.css" />
 </head>
 
 <body>
@@ -28,6 +28,17 @@
     </div>
     <div id="site_content">
 
+
+  <div class="sidebar">
+    <img src="images/Panos.jpg" width=190px/>
+    <h4>Address</h4>
+    Department of Computer Science and Information Systems<br/>
+    Birkbeck, University of London<br/>
+    Malet Street<br/>
+    London WC1E 7HX<br/>
+    <h4>Email</h4>
+    p.charalampopoulos[at]bbk.ac.uk <br/>
+  </div>
 
     <div id="content">
         <h2>Birkbeck, University of London</h2>
