--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-  <link rel="stylesheet" type="text/css" href="style/style.css" />
+  <link rel="stylesheet" type="text/css" href="style/style2.css" />
 </head>
 
 <body>
@@ -27,17 +27,6 @@
       </div>
     </div>
     <div id="site_content">
-
-  <div class="sidebar">
-    <img src="images/Panos.jpg" width=190px/>
-    <h4>Address</h4>
-    Department of Computer Science and Information Systems<br/>
-    Birkbeck, University of London<br/>
-    Malet Street<br/>
-    London WC1E 7HX<br/>
-    <h4>Email</h4>
-    p.charalampopoulos[at]bbk.ac.uk <br/>
-  </div>
 
 <div id="content" style="width: 800px;">
   <!--<h2>Preprints</h2>
@@ -77,7 +66,7 @@
     <li><strong>Dynamic Longest Common Substring in Polylogarithmic Time</strong> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2020.27">doi</a>] [<a href="https://arxiv.org/abs/2006.02408">arxiv</a>]<br>P. Charalampopoulos, P. Gawrychowski, K. Pokorski<br><a href="https://icalp2020.saarl,-informatics-campus.de/">ICALP 2020</a>: 27:1-27:19.</li>
     <li><strong>Unary Words Have the Smallest Levenshtein k-Neighbourhoods</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.10">doi</a>]<br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, T. Wale&#324, W. Zuba<br><a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>: 10:1-10:12. </li>
     <li><strong>Dynamic String Alignment</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.9">doi</a>] [<a href="slides/Dynamic_String_Alignment.pdf">slides</a>] [<a href="https://www.youtube.com/watch?v=OtTHIHTyo1M&feature=youtu.be&ab_channel=CPM">talk</a>]<br>P. Charalampopoulos, T. Kociumaka, S. Mozes<br><a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>: 9:1-9:13. </li>
-    <li><strong>Counting Distinct Patterns in Internal Dictionary Matching</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.8">doi</a>] [<a href="https://arxiv.org/abs/2005.05681">arxiv</a>]<br><p>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter, J. Straszy&#324ski, T. Wale&#324, W. Zuba</p><a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>: 8:1-8:15. </li>
+    <li><strong>Counting Distinct Patterns in Internal Dictionary Matching</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2020.8">doi</a>] [<a href="https://arxiv.org/abs/2005.05681">arxiv</a>]<br>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter, J. Straszy&#324ski, T. Wale&#324, W. Zuba<br><a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>: 8:1-8:15. </li>
     <li><strong>Internal Dictionary Matching</strong> [<a href="https://doi.org/10.4230/LIPIcs.ISAAC.2019.22">doi</a>] [<a href="https://arxiv.org/abs/1909.11577">arxiv</a>] [<a href="slides/IDM.pdf">slides</a>]<br>P. Charalampopoulos, T. Kociumaka, M. Mohamed, J. Radoszewski, W. Rytter, T. Wale&#324<br><a href="http://itcs.shufe.edu.cn/isaac2019/">ISAAC 2019</a>: 22:1-22:17.</li>
     <li><strong>Weighted Shortest Common Supersequence Problem Revisited</strong> [<a href="https://doi.org/10.1007/978-3-030-32686-9_16">doi</a>] [<a href="https://arxiv.org/abs/1909.11433">arxiv</a>]<br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, W. Rytter, J. Straszy&#324ski, T. Wale&#324, W. Zuba<br><a href="https://spire19.lbd.org.es/">SPIRE 2019</a>: 221-238.</li>
     <li><strong>Longest Common Substring Made Fully Dynamic</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2019.6">doi</a>] [<a href="https://arxiv.org/abs/1804.08731">arxiv</a>]<br>A. Amir, P. Charalampopoulos, S. P. Pissis, J. Radoszewski<br><a href="https://algo2019.ak.in.tum.de/">ESA 2019</a>: 6:1-6:17.</li>
