--- a/publications.html
+++ b/publications.html
@@ -35,15 +35,15 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
-    <li><strong>On the Hardness of Computing the Edit Distance of Shallow Trees</strong>
+    <li><strong>On the Hardness of Computing the Edit Distance of Shallow Trees</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_21">doi</a>] [<a href="">pdf</a>] [<a href="slides/Shallow_TED.pdf">slides</a>]
       <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br>
-      <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>.</li>
-    <li><strong>Subsequence Covers of Words</strong>
+      <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 290–302.</li>
+    <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_1">doi</a>] [<a href="">arxiv</a>]
       <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>
-      <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>.</li>
-    <li><strong>Faster Pattern Matching Under Edit Distance</strong> [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>]
+      <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 3-15. <b><font color="red">Best Paper Award</font></b></li>
+    <li><strong>Faster Pattern Matching Under Edit Distance</strong> [<a href="https://doi.org/10.1109/FOCS54457.2022.00072">doi</a>] [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>] [<a href="slides/PM_ED">slides</a>]
     <br>P. Charalampopoulos, T. Kociumaka, P. Wellnitz
-    <br><a href="https://focs2022.eecs.berkeley.edu/">FOCS 2022</a>.</li>
+    <br><a href="https://focs2022.eecs.berkeley.edu/">FOCS 2022</a>: 710-719.</li>
     <li><strong>Approximate Circular Pattern Matching</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2022.35">doi</a>] [<a href="https://arxiv.org/abs/2208.08915">arxiv</a>]
     <br>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, S. P. Pissis, W. Rytter, T. Wale&#324, W. Zuba<br>  <a href="https://algo2022.eu/esa/">ESA 2022</a>.</li>
     <li><strong>Longest Palindromic Substring in Sublinear Time</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2022.20">doi</a>]<br> P. Charalampopoulos, S. P. Pissis, J. Radoszewski<br> <a href="https://www.stringology.org/event/CPM2022/">CPM 2022</a>: 20:1–20:9.</li>
