--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
-    <li><strong>On the Hardness of Computing the Edit Distance of Shallow Trees</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_21">doi</a>] [<a href="slides/Shallow_TED.pdf">slides</a>]
+    <li><strong>On the Hardness of Computing the Edit Distance of Shallow Trees</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_21">doi</a>] [<a href="papers/Shallow_TED.pdf">slides</a>] [<a href="slides/Shallow_TED.pdf">slides</a>]
       <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br>
       <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 290–302.</li>
     <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_1">doi</a>]
